--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,6 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-jwt==1.4.0
 kiwisolver==1.4.9
 limits==5.6.0
 Mako==1.3.10
@@ -66,6 +65,7 @@ networkx==3.5
 numpy==2.3.4
 ordered-set==4.1.0
 packaging==25.0
+pandas==2.3.3
 parsimonious==0.10.0
 pillow==12.0.0
 propcache==0.4.1
@@ -74,8 +74,12 @@ pycryptodome==3.23.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
 pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
 pyunormalize==17.0.0
+pywin32==311
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
@@ -90,6 +94,7 @@ toolz==1.1.0
 types-requests==2.32.4.20250913
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 web3==7.14.0
 websockets==15.0.1
